# eagle-eye

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs
src/cli/: app.rs  completions.rs  library.rs  mod.rs  output.rs  plugin.rs  stdin.rs  tag.rs
src/cli/folder/: mod.rs  rename.rs
src/cli/folder/list/: mod.rs
src/cli/folder/list/args/: tree.rs
src/cli/item/: add_bookmark.rs  add_from_path.rs  add_from_paths.rs  add_from_url.rs  add_from_urls.rs  info.rs  mod.rs  move_to_trash.rs  refresh_palette.rs  refresh_thumbnail.rs  thumbnail.rs  update.rs
src/cli/item/list/: mod.rs
src/cli/subcommands/: app.rs  library.rs  mod.rs
src/cli/subcommands/folder/: mod.rs
src/cli/subcommands/folder/list/: mod.rs
src/cli/subcommands/folder/list/args/: tree.rs
src/cli/subcommands/item/: mod.rs
src/lib/: api.rs  client.rs  mod.rs  types.rs
