[package]
name = "eagle-eye"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.2"
dirs = "5"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
percent-encoding = "2.3"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
